Fix comment block alignment

--- a/themes/pelican-hss/static/css/style.css
+++ b/themes/pelican-hss/static/css/style.css
@@ -68,6 +68,7 @@ div.Warning {
 
 div#comments {
     padding-top: 2em;
+    float: left;
 }
 
 div#archives {
